<resources>
    <string name="app_name">MarvelStore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="usuario_nuevo">Usuario Nuevo</string>
    <string name="settings_ver_carrito">Ver Carrito</string>
    <string name="perfil">Perfil</string>
    <string name="cat_logo">Catálogo</string>
    <string name="tienda">Tienda</string>
    <string name="carrito">Carrito</string>
    <string name="pedidos">Pedidos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>


    <string name="required">Requerido</string>
    <string name="porfavor_espere">Por favor espere..</string>
    <string name="str_sin_conexion">Hubo un problema con la conexión, por favor intente de nuevo</string>
    <string name="str_error_servidor">Ocurrio un error con el servidor, intente mas tarde</string>
    <string name="password">La contraseña debe de tener al menos 1 digito en Mayúscula, 1 Número y 1 Minúscula</string>
    <string name="PasosDespuesDeposito">Una vez realizado el pago, favor de enviar su comprobante de pago (escaneado, foto, PDF generado de la transferencia, etc) (No aplica para pagos vía PAYPAL y Tarjeta de Crédito/Debito) mencionando el producto que desea adquirir al correo servicios@contadormx.net, En caso de necesitar factura, anexar sus datos fiscales (RFC, Razón social, Uso del CFDi y Correo electrónico). Una vez que recibimos el comprobante de pago, el tiempo de respuesta con instrucciones para la activación de su compra es en un lapso de 1 a 2 horas aproximadamente. La factura se le hará llegar al correo electrónico proporcionado en un lapso de 24 a 48 horas hábiles. Gracias por su amable tiempo de espera.</string>
    <string name="instrucciones_para_el_proceso_de_pago">Instrucciones para el Proceso de Pago</string>
    <string name="metodos_de_pago">Metodos de Pago – Cuentas Bancarias y Pagos en Tiendas OXXO y Seven Eleven</string>

</resources>
