<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_user"
            android:title="@string/perfil" />

    </group>

    <item android:title="@string/tienda">
        <menu>
            <item
                android:id="@+id/nav_catalogo"
                android:icon="@drawable/ic_catalogo"
                android:title="@string/cat_logo" />
            <item
                android:id="@+id/nav_carrito"
                android:icon="@drawable/ic_carrito"
                android:title="@string/carrito" />
            <item
                android:id="@+id/nav_pedidos"
                android:icon="@drawable/ic_pedidos"
                android:title="@string/pedidos" />

        </menu>
    </item>

</menu>
