<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vistas.Actividades.FinalizarPago">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/finalizar_lyt_finalizar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instrucciones_para_el_proceso_de_pago" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/metodos_de_pago" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/finalizar_imgv_banorte"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:src="@drawable/logo_banorte" />

                <LinearLayout
                    android:id="@+id/finalizar_lyt_banorte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="BANORTE (Depósitos en Efectivo y Transferencias) " />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Cuenta: 0353113598 " />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Clabe: 072 135 00353113598 8" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="A: UTILIDADES DIGITALES MX SA DE CV"
                        android:textColor="@color/colorPrimaryRed" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/finalizar_imgv_bancomer"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:src="@drawable/logo_bancomer" />

                <LinearLayout
                    android:id="@+id/finalizar_lyt_bancomer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="BANCOMER (Depósitos en efectivo y Transferencias) " />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Cuenta: 0111424165" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Clabe: 012 320 00111424165 5" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="A: UTILIDADES DIGITALES MX SA DE CV"
                        android:textColor="@color/colorPrimaryRed" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/finalizar_imgv_seven"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:src="@drawable/logo_eleven" />

                <LinearLayout
                    android:id="@+id/finalizar_lyt_seven"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Datos para Depositar en cualquier Tienda Seven Eleven"
                        android:textColor="@color/colorPrimaryRed" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="4189-2810-4332-7726 (Puedes depositar también directo en Banorte)" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:src="@drawable/logo_oxx"
                    android:id="@+id/finalizar_imgv_oxxo"/>

                <LinearLayout
                    android:id="@+id/finalizar_lyt_oxxo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Datos para Depositar en cualquier Tienda OXXO"
                        android:textColor="@color/colorPrimaryRed" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="4189-2810-4332-7726 (Puedes depositar también directo en Banorte)" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/finalizar_txtv_hacer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="¿Qué hacer después de realizar el depósito?"
                    android:textSize="22sp"
                    android:layout_gravity="center"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/finalizar_txtv_after"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:visibility="gone"
                    android:text="@string/PasosDespuesDeposito" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/finalizar_lyt_finalizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_transferencia"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Finalizar"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:gravity="center"/>

    </LinearLayout>

</RelativeLayout>